manually implementing BPE using python

--- a/BytePairEncoding.ipynb
+++ b/BytePairEncoding.ipynb
@@ -456,7 +456,7 @@
     "        pairToBeMerged = getPairToBeMerged(bpeStats, pairs)\n",
     "        if pairToBeMerged[0] == -1:\n",
     "            break\n",
-    "        word = mergeLetters(Word, pairToBeMerged)\n",
+    "        word = mergeLetters(word, pairToBeMerged)\n",
     "    return word        "
    ]
   },
@@ -467,16 +467,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Word' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbpeTokenize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlowest\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbpeStats\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[24], line 11\u001b[0m, in \u001b[0;36mbpeTokenize\u001b[1;34m(word, bpeStats)\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m pairToBeMerged[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m     word \u001b[38;5;241m=\u001b[39m mergeLetters(\u001b[43mWord\u001b[49m, pairToBeMerged)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m word\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Word' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'low est_'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
