--- a/MinimumEditDistance.ipynb
+++ b/MinimumEditDistance.ipynb
@@ -169,10 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e10e462d-0aa9-400b-afa0-d0448bf744cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Type a word: Historu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Did you mean History?\n",
+      "MED =  1\n"
+     ]
+    }
+   ],
    "source": [
     "word = input('Type a word:')\n",
     "corrWord, MED = correctSpellings(word, L)\n",
