--- a/nGram.ipynb
+++ b/nGram.ipynb
@@ -25,7 +25,7 @@
     "    if not isTokenized:\n",
     "        doc = [token.text for token in nlp(doc)]\n",
     "\n",
-    "    doc = ' '.join(doc).lower().split(' ')\n",
+    "    doc = ' '.join(doc).lower().split(' ') #convert all to lowercase\n",
     "    grams = [doc[i:i+n] for i in range(len(doc)-n+1)]\n",
     "    print (doc)\n",
     "    return grams"
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "def buildModel():\n",
-    "    model = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "    model = defaultdict(lambda: defaultdict(lambda: 0)) #eg. {x: {y: 0}}\n",
     "    return model"
    ]
   },
@@ -103,7 +103,7 @@
     "def updateCount(nGram, model):\n",
     "    w_1_to_n_minus_1 = tuple(nGram[:1])\n",
     "    w_n = nGram[-1]\n",
-    "    model[w_1_to_n_minus_1][w_n] += 1\n",
+    "    model[w_1_to_n_minus_1][w_n] += 1 #eg. {w_1_to_n_minus_1: {w_n: 1}}\n",
     "    return model"
    ]
   },
@@ -113,7 +113,14 @@
    "id": "60cc78fc-5e3b-4ba8-92d8-2bdea8606b3c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def computeProbability(model):\n",
+    "    for w_1_to_n_minus_1 in model:\n",
+    "        totalCount = float(sum(model[w_1_to_n_minus_1].values()))\n",
+    "        for w_n in model[w_1_to_n_minus_1]:\n",
+    "            model[w_1_to_n_minus_1][w_n] /= totalCount\n",
+    "    return model"
+   ]
   }
  ],
  "metadata": {
