TFIDF manual implementation

--- a/Word_&_Document_Representations.ipynb
+++ b/Word_&_Document_Representations.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "846ee2d8-a61d-4c4a-be9a-898d15d3bde8",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "'game'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "43847480-9917-46e5-8f2a-d3134fc60a02",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "'￥dd'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,27 +132,17 @@
    "source": [
     "def oneHotVector(word, W2I, numWords):\n",
     "    v = np.zeros(numWords)\n",
-    "    v[W2I[word]] = 1\n",
+    "    if word in W2I:\n",
+    "        v[W2I[word]] = 1\n",
     "    return v"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "0c6ea2cc-c1ec-4ac2-a60f-55ff579627be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., ..., 0., 0., 0.], shape=(84780,))"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v = oneHotVector('game', W2I, numWords)"
    ]
@@ -204,12 +194,12 @@
    "id": "211aec24-8cfa-48c2-9415-1f91c6fb3e4a",
    "metadata": {},
    "source": [
-    "## Term Frequency"
+    "## Term Frequency (TF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "422dcbad-2f96-47d7-a188-702a1958e1fd",
    "metadata": {},
    "outputs": [],
@@ -220,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "6434ce4b-4bba-494e-b620-c51d341ce500",
    "metadata": {},
    "outputs": [],
@@ -232,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "2f2d1d28-4585-47fe-b79c-c28df17a1e54",
    "metadata": {},
    "outputs": [
@@ -242,7 +232,7 @@
        "array([0., 0., 0., ..., 0., 3., 2.], shape=(84780,))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,9 +242,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2297fe5e-e506-4ce4-9202-a2bf7c2d2587",
+   "metadata": {},
+   "source": [
+    "## TFIDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7c5f0ecb-744b-4f10-b764-8e301b426f8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import fetch_20newsgroups as getData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "10c7ca2a-91c6-4fc4-b085-a4448e68cdbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = getData(subset='train',remove=('headers','footers','qoutes'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8c28f7e6-36b5-40c0-9382-a1eb931006fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = corpus.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2dc13957-50e5-405b-8c40-c022dc55d177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11314"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2640a3fa-d24e-4894-8f9d-0624c17caa7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I was wondering if anyone out there could enlighten me on this car I saw\\nthe other day. It was a 2-door sports car, looked to be from the late 60s/\\nearly 70s. It was called a Bricklin. The doors were really small. In addition,\\nthe front bumper was separate from the rest of the body. This is \\nall I know. If anyone can tellme a model name, engine specs, years\\nof production, where this car is made, history, or whatever info you\\nhave on this funky looking car, please e-mail.'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e392bbd-a1c9-487e-9e9f-32b44fb79737",
+   "id": "2cd3748b-3a01-4fe7-9552-c3b8842a69df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = np.zeros(numWords)\n",
+    "\n",
+    "for term in L:\n",
+    "    dft = 0\n",
+    "    # for doc in docs[:100]:  #100 docs for testing only(full docs(11314) takes much time)\n",
+    "    for doc in docs:\n",
+    "        if term in doc:\n",
+    "            dft += 1\n",
+    "    df[W2I[term]] = dft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30a38f35-70a6-4e26-a5c9-6df8d2ad4740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ce1f8d1-6066-4f1c-a5b2-bb9ad64ca505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = len(docs)\n",
+    "N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ebc006-04c9-4390-854c-ea9577f027bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Idf = np.log10(N/(df+1)) #df+1 because some values are 0; so creates error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "035540c9-03b0-4dc5-a837-02bb40777ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = 'How are you today. I know most of the time how you feel.' #as above TF ^^\n",
+    "v = np.zeros(numWords)\n",
+    "\n",
+    "for token in nlp(doc):\n",
+    "    v += oneHotVector(token.text,W2I,numWords)\n",
+    "\n",
+    "# tokens = [token.text for token in nlp(doc)]\n",
+    "# for token in tokens:\n",
+    "#     v += oneHotVector(token,W2I,numWords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e10da24-c9fc-441f-99c5-34c7602f1ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf = np.log10(v+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acf09fb4-8d62-4b45-8e58-5e20ace5da99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf = tf * Idf\n",
+    "tfidf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3318409e-ee31-4f94-a4cd-0e6b7cdfeb70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(tfidf != 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c242d1fb-b369-4488-8fca-95ceb9abec3a",
    "metadata": {},
    "outputs": [],
    "source": []
