--- a/MinimumEditDistance.ipynb
+++ b/MinimumEditDistance.ipynb
@@ -15,7 +15,18 @@
    "execution_count": 2,
    "id": "ade8fa37-2f46-45e8-87f1-051a2c46d5ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Shatin\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\utils\\generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n",
+      "C:\\Users\\Shatin\\AppData\\Roaming\\Python\\Python312\\site-packages\\transformers\\utils\\generic.py:309: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    }
+   ],
    "source": [
     "nlp = spacy.load('en_core_web_sm')"
    ]
@@ -169,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e10e462d-0aa9-400b-afa0-d0448bf744cc",
    "metadata": {},
    "outputs": [
@@ -177,14 +188,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Type a word: Historu\n"
+      "Type a word: anana\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Did you mean History?\n",
+      "Did you mean Banana?\n",
       "MED =  1\n"
      ]
     }
