--- a/Term-Term Matrix.ipynb
+++ b/Term-Term Matrix.ipynb
@@ -132,6 +132,99 @@
    "source": [
     "len(corpus_list)-len(processedCorpus_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "47fe188e-4047-4b05-a263-2344f9065682",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "253855"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(frequency)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e86a6769-3391-43c6-8482-41021c5dcca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allWords = np.array(list(frequency.keys()))\n",
+    "allCounts = np.array(list(frequency.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c2b90cfb-edc8-4292-b01c-d1abb15c3847",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "253855"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(allWords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4ce83ae0-208f-4531-8bd7-893834542292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = allWords[allCounts >= cutOffValue]\n",
+    "wordCounts = allCounts[allCounts >= cutOffValue]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "37f2052a-0426-475b-be9f-11ea8c5c992b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11815"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd12e525-6580-452c-a09e-810ac3d8743c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
