funtion for matrix build

--- a/Term-Term Matrix.ipynb
+++ b/Term-Term Matrix.ipynb
@@ -220,8 +220,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fd12e525-6580-452c-a09e-810ac3d8743c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computeWordContextMatrix(corpus_list,vocab=None,windowSize=2):\n",
+    "    if vocab is None:\n",
+    "        vocab = sorted(list(set(cospus_list)))\n",
+    "    numWords = len(vocab)\n",
+    "    M = np.zeros((numWords,numWords))\n",
+    "    W2I = dict(zip(vocab,np.arange(numWords)))\n",
+    "    I2W = dict(zip(np.arange(numWords),vocab))\n",
+    "    doc = corpus_list\n",
+    "    docLen = len(doc)\n",
+    "    curIdx = 0\n",
+    "    while curIdx < docLen:\n",
+    "        left = max(curIdx-windowSize,0)\n",
+    "        right = min(curIdx+windowSize+1,docLen)\n",
+    "        wordsInContext = doc[left:curIdx] + doc[curIdx+1:right]\n",
+    "        currentWord = doc[curIdx]\n",
+    "        currentWordIdx = W2I[currentWord]\n",
+    "        for word in wordsInContext:\n",
+    "            contextWordIdx = W2I[word]\n",
+    "            M[currentWordIdx,contextWordIdx] += 1\n",
+    "        curIdx += 1\n",
+    "    return M,W2I,I2W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1b8be03c-a294-4e4b-9dea-ad81a02644cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M,W2I,I2W = computeWordContextMatrix(processedCorpus_list,vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89e36d4f-730e-484e-8b9a-694d08640205",
    "metadata": {},
    "outputs": [],
    "source": []
