--- a/Term-Term Matrix.ipynb
+++ b/Term-Term Matrix.ipynb
@@ -220,7 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "id": "158dcbb0-eb91-4070-84d1-d119724df178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import lil_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "fd12e525-6580-452c-a09e-810ac3d8743c",
    "metadata": {},
    "outputs": [],
@@ -230,6 +240,7 @@
     "        vocab = sorted(list(set(cospus_list)))\n",
     "    numWords = len(vocab)\n",
     "    M = np.zeros((numWords,numWords))\n",
+    "    # M = lil_matrix((numWords,numWords)) #for computing big matrix by splitting into pieces\n",
     "    W2I = dict(zip(vocab,np.arange(numWords)))\n",
     "    I2W = dict(zip(np.arange(numWords),vocab))\n",
     "    doc = corpus_list\n",
@@ -250,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1b8be03c-a294-4e4b-9dea-ad81a02644cb",
    "metadata": {},
    "outputs": [],
@@ -262,6 +273,48 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "89e36d4f-730e-484e-8b9a-694d08640205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bcab1ce-3cda-4093-b7c2-c08dc2b558a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word = 'good'\n",
+    "print(W2I[word],I2W[190])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e729034e-2543-4383-b24a-520730061ef8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = M[W2I['good'],:]\n",
+    "print(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b02d9f3-7083-44fb-be77-b6705e8b5ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff26f5a-e40a-4865-bc07-ac2a1ebf924f",
    "metadata": {},
    "outputs": [],
    "source": []
