--- a/Term-Term Matrix.ipynb
+++ b/Term-Term Matrix.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1b8be03c-a294-4e4b-9dea-ad81a02644cb",
    "metadata": {},
    "outputs": [],
@@ -271,39 +271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "89e36d4f-730e-484e-8b9a-694d08640205",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(11815, 11815)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8bcab1ce-3cda-4093-b7c2-c08dc2b558a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "190 good\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word = 'good'\n",
     "print(W2I[word],I2W[190])"
@@ -311,18 +292,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e729034e-2543-4383-b24a-520730061ef8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.   0. 214. ...   0.   0.   0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v = M[W2I['good'],:]\n",
     "print(v)"
@@ -330,21 +303,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8b02d9f3-7083-44fb-be77-b6705e8b5ad9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(11815,)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v.shape"
    ]
@@ -355,7 +317,40 @@
    "id": "cff26f5a-e40a-4865-bc07-ac2a1ebf924f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def pmi(M, positive=True):\n",
+    "    col_totals = np.sum(M,axis=0)\n",
+    "    total = col_totals.sum()\n",
+    "    row_totals = np.sum(M,axis=1)\n",
+    "    expected = np.outer(row_totals, col_totals) / total\n",
+    "    M = M / expected    \n",
+    "    with np.errstate(divide='ignore'):\n",
+    "        M = np.log(M)\n",
+    "    M[np.isinf(M)] = 0.0  \n",
+    "    if positive:\n",
+    "        M[M < 0] = 0.0\n",
+    "    return M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f1efedf-cc9f-4871-b409-607c4ca116d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = pmi(M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "718d8672-e5da-4df1-81e0-dde51050972d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M[W2I['good'],:]"
+   ]
   }
  ],
  "metadata": {
