--- a/Term-Term Matrix.ipynb
+++ b/Term-Term Matrix.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1b8be03c-a294-4e4b-9dea-ad81a02644cb",
    "metadata": {},
    "outputs": [],
@@ -271,20 +271,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "89e36d4f-730e-484e-8b9a-694d08640205",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11815, 11815)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "M.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8bcab1ce-3cda-4093-b7c2-c08dc2b558a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190 good\n"
+     ]
+    }
+   ],
    "source": [
     "word = 'good'\n",
     "print(W2I[word],I2W[190])"
@@ -292,10 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e729034e-2543-4383-b24a-520730061ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   0. 214. ...   0.   0.   0.]\n"
+     ]
+    }
+   ],
    "source": [
     "v = M[W2I['good'],:]\n",
     "print(v)"
@@ -303,17 +330,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8b02d9f3-7083-44fb-be77-b6705e8b5ad9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11815,)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "cff26f5a-e40a-4865-bc07-ac2a1ebf924f",
    "metadata": {},
    "outputs": [],
@@ -334,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5f1efedf-cc9f-4871-b409-607c4ca116d4",
    "metadata": {},
    "outputs": [],
@@ -344,13 +382,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "718d8672-e5da-4df1-81e0-dde51050972d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.       , 0.       , 0.4605286, ..., 0.       , 0.       ,\n",
+       "       0.       ])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "M[W2I['good'],:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8985f3b-48b4-43a0-9dd9-0d89490fc2a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
