--- a/Singular Value Decomposition.ipynb
+++ b/Singular Value Decomposition.ipynb
@@ -30,9 +30,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.18332301, 0.46540736, 0.89748204, 0.94901883],\n",
-       "       [0.643083  , 0.23485914, 0.0204858 , 0.76593001],\n",
-       "       [0.54155563, 0.00154791, 0.26097949, 0.0645092 ]])"
+       "array([[0.43392066, 0.43202624, 0.33803855, 0.98223217],\n",
+       "       [0.87838   , 0.4042427 , 0.80896591, 0.47674113],\n",
+       "       [0.73387048, 0.61275416, 0.52627535, 0.25799393]])"
       ]
      },
      "execution_count": 3,
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "ATA = A.T.dot(A)\n",
-    "AAt = A.dot(A.T)"
+    "AAT = A.dot(A.T)"
    ]
   },
   {
@@ -64,10 +64,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.74044556, 0.23719208, 0.31903808, 0.70146887],\n",
-       "       [0.23719208, 0.27176522, 0.42291   , 0.62166587],\n",
-       "       [0.31903808, 0.42291   , 0.87400398, 0.88425362],\n",
-       "       [0.70146887, 0.62166587, 0.88425362, 1.49144696]])"
+       "array([[1.49840446, 0.992226  , 1.24347933, 1.03430484],\n",
+       "       [0.992226  , 0.72552649, 0.79553749, 0.77515605],\n",
+       "       [1.24347933, 0.79553749, 1.04566164, 0.85347551],\n",
+       "       [1.03430484, 0.77515605, 0.85347551, 1.25862301]])"
       ]
      },
      "execution_count": 5,
@@ -88,9 +88,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.95632209, 0.97246472, 0.39544486],\n",
-       "       [0.97246472, 1.05578301, 0.40338466],\n",
-       "       [0.39544486, 0.40338466, 0.36555662]])"
+       "array([[1.45398391, 1.29752283, 1.01447874],\n",
+       "       [1.29752283, 1.81667154, 1.44105368],\n",
+       "       [1.01447874, 1.44105368, 1.25756015]])"
       ]
      },
      "execution_count": 6,
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "AAt"
+    "AAT"
    ]
   },
   {
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "array([2.70746231e+00, 4.93429462e-01, 1.76769945e-01, 9.29293597e-17])"
+       "array([4.04962470e+00, 4.13327083e-01, 5.42934390e-16, 6.52638164e-02])"
       ]
      },
      "execution_count": 8,
@@ -142,10 +142,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.37514385, -0.812732  , -0.43526408, -0.09632739],\n",
-       "       [-0.30656897,  0.14835409,  0.1909561 , -0.9206206 ],\n",
-       "       [-0.48660495,  0.56307659, -0.6577411 ,  0.11634871],\n",
-       "       [-0.7269788 , -0.02006276,  0.58434373,  0.36005793]])"
+       "array([[-0.59575431, -0.38405144,  0.70392872,  0.04544937],\n",
+       "       [-0.40883224, -0.05301386, -0.31985025, -0.85307769],\n",
+       "       [-0.49267229, -0.33641204, -0.63240636,  0.49412867],\n",
+       "       [-0.48498146,  0.85820799,  0.04735359,  0.1613371 ]])"
       ]
      },
      "execution_count": 9,
@@ -166,7 +166,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.40102591,  0.07320228,  0.27783858, -0.00989956])"
+       "array([-2.41258138, -1.65561713, -1.99513786, -1.96399291])"
       ]
      },
      "execution_count": 10,
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "ATA.dot(V[:,1])"
+    "ATA.dot(V[:,0])"
    ]
   },
   {
@@ -187,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.40102591,  0.07320228,  0.27783858, -0.00989956])"
+       "array([-2.41258138, -1.65561713, -1.99513786, -1.96399291])"
       ]
      },
      "execution_count": 11,
@@ -196,13 +196,347 @@
     }
    ],
    "source": [
-    "d1[1]*V[:,1]"
+    "d1[0]*V[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f0a48c2e-81df-48d8-8397-a3570f493821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = np.argsort(d1)[::-1]\n",
+    "d1 = d1[idx]\n",
+    "V = V[:,idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e143a975-ced6-4ecc-b76c-db17efc4d178",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.04962470e+00, 4.13327083e-01, 6.52638164e-02, 5.42934390e-16])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cca652db-1a96-47ba-a541-a48732028141",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.59575431, -0.38405144,  0.04544937,  0.70392872],\n",
+       "       [-0.40883224, -0.05301386, -0.85307769, -0.31985025],\n",
+       "       [-0.49267229, -0.33641204,  0.49412867, -0.63240636],\n",
+       "       [-0.48498146,  0.85820799,  0.1613371 ,  0.04735359]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5ae19784-c114-4138-943d-a8b67fba3fe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2,U = LA.eig(AAT)\n",
+    "idx = np.argsort(d2)[::-1]\n",
+    "d2 = d2[idx]\n",
+    "U = U[:,idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7851cede-648c-4d0c-a521-594927845aa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.04962470e+00, 4.13327083e-01, 6.52638164e-02, 5.42934390e-16])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "59d72a42-e015-4618-a84f-c10718dc0333",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.0496247 , 0.41332708, 0.06526382])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9a4bea87-4a0d-4e66-a6ec-a4911560f483",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.53570869,  0.83945196,  0.09130503],\n",
+       "       [ 0.6551147 , -0.34495972, -0.67218117],\n",
+       "       [ 0.53276724, -0.41990856,  0.73473524]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a5bcb682-bda7-4525-ae38-ea221a4da3bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.59575431, -0.38405144,  0.04544937,  0.70392872],\n",
+       "       [-0.40883224, -0.05301386, -0.85307769, -0.31985025],\n",
+       "       [-0.49267229, -0.33641204,  0.49412867, -0.63240636],\n",
+       "       [-0.48498146,  0.85820799,  0.1613371 ,  0.04735359]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b634a5b7-1163-4745-a590-bf0f2b66a8bc",
+   "metadata": {},
+   "source": [
+    "## Now do this(SVD) using builtin np function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1236798b-8746-449b-8ac0-9064860d896e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U2,S2,V2 = LA.svd(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "76a7fd99-5cf5-40b2-be33-f7fa5b53004a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.53570869,  0.83945196,  0.09130503],\n",
+       "       [ 0.6551147 , -0.34495972, -0.67218117],\n",
+       "       [ 0.53276724, -0.41990856,  0.73473524]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b6e31309-e340-4433-a85e-e148c2e716c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.53570869,  0.83945196,  0.09130503],\n",
+       "       [ 0.6551147 , -0.34495972, -0.67218117],\n",
+       "       [ 0.53276724, -0.41990856,  0.73473524]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c72cadc2-1879-493c-b1a0-293966ccd3f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4.0496247 , 0.41332708, 0.06526382])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "79775430-4506-454d-a77f-de2d25863bff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.01236793, 0.64290519, 0.25546784])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S2 #here S2 is small than d2 because it is showing after square rooting the d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8aa103ce-6846-4064-912a-3628f4342123",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.01236793, 0.64290519, 0.25546784])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2**.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2e984fd2-30be-4cc7-8a55-92a87a5ca866",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.59575431, -0.38405144,  0.04544937,  0.70392872],\n",
+       "       [-0.40883224, -0.05301386, -0.85307769, -0.31985025],\n",
+       "       [-0.49267229, -0.33641204,  0.49412867, -0.63240636],\n",
+       "       [-0.48498146,  0.85820799,  0.1613371 ,  0.04735359]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f66568c9-d371-496d-98c7-d9dd1c86ff5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.59575431,  0.40883224,  0.49267229,  0.48498146],\n",
+       "       [-0.38405144, -0.05301386, -0.33641204,  0.85820799],\n",
+       "       [-0.04544937,  0.85307769, -0.49412867, -0.1613371 ],\n",
+       "       [-0.70392872,  0.31985025,  0.63240636, -0.04735359]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V2 #is is transpose of V"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0a48c2e-81df-48d8-8397-a3570f493821",
+   "id": "788b7948-f0b6-4c04-ada5-62f0655e60fa",
    "metadata": {},
    "outputs": [],
    "source": []
