--- a/Singular Value Decomposition.ipynb
+++ b/Singular Value Decomposition.ipynb
@@ -30,9 +30,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.43392066, 0.43202624, 0.33803855, 0.98223217],\n",
-       "       [0.87838   , 0.4042427 , 0.80896591, 0.47674113],\n",
-       "       [0.73387048, 0.61275416, 0.52627535, 0.25799393]])"
+       "array([[0.26127459, 0.21301238, 0.71139252, 0.05060917],\n",
+       "       [0.18495623, 0.3165808 , 0.93955759, 0.44232536],\n",
+       "       [0.5337521 , 0.21171455, 0.37491909, 0.7388873 ]])"
       ]
      },
      "execution_count": 3,
@@ -64,10 +64,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.49840446, 0.992226  , 1.24347933, 1.03430484],\n",
-       "       [0.992226  , 0.72552649, 0.79553749, 0.77515605],\n",
-       "       [1.24347933, 0.79553749, 1.04566164, 0.85347551],\n",
-       "       [1.03430484, 0.77515605, 0.85347551, 1.25862301]])"
+       "array([[0.38736453, 0.2272114 , 0.55975967, 0.48941637],\n",
+       "       [0.2272114 , 0.19042073, 0.52835714, 0.30724529],\n",
+       "       [0.55975967, 0.52835714, 1.5294121 , 0.72861609],\n",
+       "       [0.48941637, 0.30724529, 0.72861609, 0.74416745]])"
       ]
      },
      "execution_count": 5,
@@ -88,9 +88,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.45398391, 1.29752283, 1.01447874],\n",
-       "       [1.29752283, 1.81667154, 1.44105368],\n",
-       "       [1.01447874, 1.44105368, 1.25756015]])"
+       "array([[0.62227929, 0.80653995, 0.4886628 ],\n",
+       "       [0.80653995, 1.21285239, 0.84483221],\n",
+       "       [0.4886628 , 0.84483221, 1.01623313]])"
       ]
      },
      "execution_count": 6,
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4.04962470e+00, 4.13327083e-01, 5.42934390e-16, 6.52638164e-02])"
+       "array([ 2.44133929e+00,  3.67575342e-01,  4.24501817e-02, -1.04159108e-16])"
       ]
      },
      "execution_count": 8,
@@ -142,10 +142,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.59575431, -0.38405144,  0.70392872,  0.04544937],\n",
-       "       [-0.40883224, -0.05301386, -0.31985025, -0.85307769],\n",
-       "       [-0.49267229, -0.33641204, -0.63240636,  0.49412867],\n",
-       "       [-0.48498146,  0.85820799,  0.04735359,  0.1613371 ]])"
+       "array([[-0.35053786, -0.39306166, -0.84890285,  0.04460605],\n",
+       "       [-0.27807015,  0.06597805,  0.03395192, -0.95769053],\n",
+       "       [-0.75688586,  0.59634498,  0.05021974,  0.26262983],\n",
+       "       [-0.47636539, -0.69679415,  0.52506114,  0.10892528]])"
       ]
      },
      "execution_count": 9,
@@ -166,7 +166,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-2.41258138, -1.65561713, -1.99513786, -1.96399291])"
+       "array([-0.85578185, -0.67886359, -1.8478152 , -1.16296955])"
       ]
      },
      "execution_count": 10,
@@ -187,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-2.41258138, -1.65561713, -1.99513786, -1.96399291])"
+       "array([-0.85578185, -0.67886359, -1.8478152 , -1.16296955])"
       ]
      },
      "execution_count": 11,
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4.04962470e+00, 4.13327083e-01, 6.52638164e-02, 5.42934390e-16])"
+       "array([ 2.44133929e+00,  3.67575342e-01,  4.24501817e-02, -1.04159108e-16])"
       ]
      },
      "execution_count": 13,
@@ -241,10 +241,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.59575431, -0.38405144,  0.04544937,  0.70392872],\n",
-       "       [-0.40883224, -0.05301386, -0.85307769, -0.31985025],\n",
-       "       [-0.49267229, -0.33641204,  0.49412867, -0.63240636],\n",
-       "       [-0.48498146,  0.85820799,  0.1613371 ,  0.04735359]])"
+       "array([[-0.35053786, -0.39306166, -0.84890285,  0.04460605],\n",
+       "       [-0.27807015,  0.06597805,  0.03395192, -0.95769053],\n",
+       "       [-0.75688586,  0.59634498,  0.05021974,  0.26262983],\n",
+       "       [-0.47636539, -0.69679415,  0.52506114,  0.10892528]])"
       ]
      },
      "execution_count": 14,
@@ -278,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4.04962470e+00, 4.13327083e-01, 6.52638164e-02, 5.42934390e-16])"
+       "array([ 2.44133929e+00,  3.67575342e-01,  4.24501817e-02, -1.04159108e-16])"
       ]
      },
      "execution_count": 16,
@@ -299,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4.0496247 , 0.41332708, 0.06526382])"
+       "array([2.44133929, 0.36757534, 0.04245018])"
       ]
      },
      "execution_count": 17,
@@ -320,9 +320,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.53570869,  0.83945196,  0.09130503],\n",
-       "       [ 0.6551147 , -0.34495972, -0.67218117],\n",
-       "       [ 0.53276724, -0.41990856,  0.73473524]])"
+       "array([[-0.45656333, -0.49536244, -0.73903043],\n",
+       "       [-0.68782523, -0.33034066,  0.64635246],\n",
+       "       [-0.56431053,  0.80342461, -0.18990135]])"
       ]
      },
      "execution_count": 18,
@@ -343,10 +343,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.59575431, -0.38405144,  0.04544937,  0.70392872],\n",
-       "       [-0.40883224, -0.05301386, -0.85307769, -0.31985025],\n",
-       "       [-0.49267229, -0.33641204,  0.49412867, -0.63240636],\n",
-       "       [-0.48498146,  0.85820799,  0.1613371 ,  0.04735359]])"
+       "array([[-0.35053786, -0.39306166, -0.84890285,  0.04460605],\n",
+       "       [-0.27807015,  0.06597805,  0.03395192, -0.95769053],\n",
+       "       [-0.75688586,  0.59634498,  0.05021974,  0.26262983],\n",
+       "       [-0.47636539, -0.69679415,  0.52506114,  0.10892528]])"
       ]
      },
      "execution_count": 19,
@@ -385,9 +385,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.53570869,  0.83945196,  0.09130503],\n",
-       "       [ 0.6551147 , -0.34495972, -0.67218117],\n",
-       "       [ 0.53276724, -0.41990856,  0.73473524]])"
+       "array([[-0.45656333, -0.49536244, -0.73903043],\n",
+       "       [-0.68782523, -0.33034066,  0.64635246],\n",
+       "       [-0.56431053,  0.80342461, -0.18990135]])"
       ]
      },
      "execution_count": 21,
@@ -408,9 +408,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.53570869,  0.83945196,  0.09130503],\n",
-       "       [ 0.6551147 , -0.34495972, -0.67218117],\n",
-       "       [ 0.53276724, -0.41990856,  0.73473524]])"
+       "array([[ 0.45656333,  0.49536244,  0.73903043],\n",
+       "       [ 0.68782523,  0.33034066, -0.64635246],\n",
+       "       [ 0.56431053, -0.80342461,  0.18990135]])"
       ]
      },
      "execution_count": 22,
@@ -424,17 +424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "c72cadc2-1879-493c-b1a0-293966ccd3f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4.0496247 , 0.41332708, 0.06526382])"
+       "array([2.44133929, 0.36757534, 0.04245018])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,17 +445,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "79775430-4506-454d-a77f-de2d25863bff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.01236793, 0.64290519, 0.25546784])"
+       "array([1.56247857, 0.60627992, 0.20603442])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,17 +466,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "8aa103ce-6846-4064-912a-3628f4342123",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.01236793, 0.64290519, 0.25546784])"
+       "array([1.56247857, 0.60627992, 0.20603442])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,20 +487,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "2e984fd2-30be-4cc7-8a55-92a87a5ca866",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.59575431, -0.38405144,  0.04544937,  0.70392872],\n",
-       "       [-0.40883224, -0.05301386, -0.85307769, -0.31985025],\n",
-       "       [-0.49267229, -0.33641204,  0.49412867, -0.63240636],\n",
-       "       [-0.48498146,  0.85820799,  0.1613371 ,  0.04735359]])"
+       "array([[-0.35053786, -0.39306166, -0.84890285,  0.04460605],\n",
+       "       [-0.27807015,  0.06597805,  0.03395192, -0.95769053],\n",
+       "       [-0.75688586,  0.59634498,  0.05021974,  0.26262983],\n",
+       "       [-0.47636539, -0.69679415,  0.52506114,  0.10892528]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,20 +511,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "f66568c9-d371-496d-98c7-d9dd1c86ff5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.59575431,  0.40883224,  0.49267229,  0.48498146],\n",
-       "       [-0.38405144, -0.05301386, -0.33641204,  0.85820799],\n",
-       "       [-0.04544937,  0.85307769, -0.49412867, -0.1613371 ],\n",
-       "       [-0.70392872,  0.31985025,  0.63240636, -0.04735359]])"
+       "array([[ 0.35053786,  0.27807015,  0.75688586,  0.47636539],\n",
+       "       [-0.39306166,  0.06597805,  0.59634498, -0.69679415],\n",
+       "       [ 0.84890285, -0.03395192, -0.05021974, -0.52506114],\n",
+       "       [ 0.04460605, -0.95769053,  0.26262983,  0.10892528]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,8 +535,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "788b7948-f0b6-4c04-ada5-62f0655e60fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.35053786, -0.39306166,  0.84890285,  0.04460605],\n",
+       "       [ 0.27807015,  0.06597805, -0.03395192, -0.95769053],\n",
+       "       [ 0.75688586,  0.59634498, -0.05021974,  0.26262983],\n",
+       "       [ 0.47636539, -0.69679415, -0.52506114,  0.10892528]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V2.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81228cdd-058d-4224-aad9-8dc36f485d95",
+   "metadata": {},
+   "source": [
+    "## Testing the builtin one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "705c7eff-a7f7-4c3e-bb45-9bf2bfd853c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D2 = np.hstack((np.diag(S2),np.zeros((3,1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9de7c430-62d9-499e-bf16-1b5a04a40210",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.56247857, 0.60627992, 0.20603442])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c85b65d9-2c44-44b3-9d47-3ed532679248",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.56247857, 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.60627992, 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.20603442, 0.        ]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cb61e2d2-814d-47bb-9581-478f981483ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.26127459, 0.21301238, 0.71139252, 0.05060917],\n",
+       "       [0.18495623, 0.3165808 , 0.93955759, 0.44232536],\n",
+       "       [0.5337521 , 0.21171455, 0.37491909, 0.7388873 ]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = U2.dot(D2).dot(V2)\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ee2a77b1-ff8e-4949-abfd-0f20c99d49aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.26127459, 0.21301238, 0.71139252, 0.05060917],\n",
+       "       [0.18495623, 0.3165808 , 0.93955759, 0.44232536],\n",
+       "       [0.5337521 , 0.21171455, 0.37491909, 0.7388873 ]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d5d88d5-e691-416f-bd19-d33fdfa4e338",
+   "metadata": {},
+   "source": [
+    "## testing the manual one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "efc8b788-bcda-49f9-a562-066d63a5d84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.56247857, 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.60627992, 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.20603442, 0.        ]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2_Matrix = np.hstack((np.diag(d2**.5),np.zeros((3,1))))\n",
+    "d2_Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "aca410d7-c491-4a5f-9a63-cd59c887241f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2 = U.dot(d2_Matrix).dot(V.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "45a85658-b828-4a1a-ab73-4c3ce8ac124b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.49736967, 0.17338223, 0.35319397, 0.46914318],\n",
+       "       [0.34240015, 0.29015278, 0.70068694, 0.7214317 ],\n",
+       "       [0.15083127, 0.27599039, 0.95587862, 0.06007015]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "1478a4c9-48f3-4402-b7ee-c1a68f00d0cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.26127459, 0.21301238, 0.71139252, 0.05060917],\n",
+       "       [0.18495623, 0.3165808 , 0.93955759, 0.44232536],\n",
+       "       [0.5337521 , 0.21171455, 0.37491909, 0.7388873 ]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9d78f6c-ad57-4c84-bd4b-aa3187f70279",
    "metadata": {},
    "outputs": [],
    "source": []
